<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button
            android:id="@+id/new_location_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/new_location_doit"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="11"
            android:columnCount="2"
            android:layout_margin="2dp">
            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/new_location_position"
                android:layout_margin="@dimen/text_margin"
                />
            <GridLayout
                android:layout_row="0"
                android:layout_column="1"
                android:rowCount="3"
                android:columnCount="2"
                >
                <CheckBox
                    android:id="@+id/new_location_useGPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/new_location_usegps"/>
                <TextView
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text=".latitude"
                    />
                <EditText
                    android:id="@+id/new_location_latitude"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_location_latitude_hint"
                    />
                <TextView
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text=".longitude"
                    />
                <EditText
                    android:id="@+id/new_location_longitude"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_location_longitude_hint"
                    />
            </GridLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_row="1"
                android:layout_column="0"
                android:text=".name"
                />
            <EditText
                android:id="@+id/new_location_name"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:hint="@string/new_location_name_hint"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text=".radius"
                />
            <EditText
                android:id="@+id/new_location_radius"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />
            <TextView
                android:layout_column="0"
                android:layout_row="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text=".description"
                />
            <EditText
                android:id="@+id/new_location_description"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_row="3"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="@string/new_location_description_hint"
                />
            <TextView
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_row="4"
                android:layout_height="wrap_content"
                android:text=".country"
                />
            <EditText
                android:id="@+id/new_location_country"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_row="4"
                android:layout_column="1"
                />
            <TextView
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_row="5"
                android:layout_height="wrap_content"
                android:text=".identifier"
                />
            <GridLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:rowCount="2"
                android:columnCount="1"
                >
                <EditText
                    android:id="@+id/new_location_identifier"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_row="0"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    />
                <Button
                    android:id="@+id/new_location_autoGenerateIdentifier"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_column="0"
                    android:text="@string/new_location_autogenerate_identifier"
                    />
            </GridLayout>

            <TextView
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_row="6"
                android:text=".address"
                />
            <EditText
                android:id="@+id/new_location_address"
                android:layout_margin="@dimen/text_margin"
                android:layout_row="6"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/new_location_address_hint"
                />
            <TextView
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="7"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text=".tags"
                />
            <GridLayout
                android:layout_row="7"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_location_csv"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <EditText
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/new_location_tags"
                    />
            </GridLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_row="8"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_margin="@dimen/text_margin"
                android:text=".imageURI"
                />
            <GridLayout
            android:layout_row="8"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="3">
            <TextView
                android:id="@+id/new_location_imageURI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_location_take_image"
                android:layout_row="0"
                android:layout_column="0"/>
            <ImageView
                android:id="@+id/new_location_imagePreview"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_height="100dp"
                android:layout_width="100dp"

                />
            <Button
                android:id="@+id/new_location_capture_image_button"
                android:layout_margin="@dimen/text_margin"
                android:layout_row="2"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:text="@string/new_location_take_picture"
                />
        </GridLayout>

        </GridLayout>

    </LinearLayout>
</ScrollView>