<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="3"
            android:layout_margin="@dimen/text_margin"
            android:id="@+id/location_list_content_view"

    >

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_margin="@dimen/text_margin"
        />

    <TextView
        android:layout_column="1"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:text="@string/location_id"
        />
    <TextView
        android:id="@+id/location_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_margin="@dimen/text_margin"

        />
    <TextView
        android:layout_column="1"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_width="wrap_content"
        android:text="@string/location_latitude"
        />
    <TextView
        android:id="@+id/location_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_margin="@dimen/text_margin"

        />
    <TextView
        android:layout_column="1"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_width="wrap_content"
        android:text="@string/location_longitude"
        />
    <TextView
        android:id="@+id/location_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_margin="@dimen/text_margin"

        />

</GridLayout>