<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/add_specimen_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/add_specimen"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginBottom="@dimen/appbar_padding_top">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:layout_margin="@dimen/text_margin"
                android:text=".genus"
                />
            <EditText
                android:id="@+id/new_species_genus"
                android:layout_row="0"
                android:layout_column="1"
                />
            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:layout_margin="@dimen/text_margin"
                android:text=".species"
                />
            <EditText
                android:id="@+id/new_species_species"
                android:layout_row="1"
                android:layout_column="1"
                />
            <TextView
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_margin="@dimen/text_margin"
                android:text=".subspecies"
                />
            <EditText
                android:id="@+id/new_species_subspecies"
                android:layout_row="2"
                android:layout_column="1"
                />
            <TextView
                android:layout_column="0"
                android:layout_row="3"
                android:layout_margin="@dimen/text_margin"
                android:text=".nickname"
                />
            <EditText
                android:id="@+id/new_species_nickname"
                />
            <TextView
                android:layout_margin="@dimen/text_margin"
                android:text=".author"
                />
            <EditText
                android:id="@+id/new_species_author"
                />
            <TextView
                android:layout_margin="@dimen/text_margin"
                android:text=".imageURI"
                />
            <GridLayout
                android:layout_row="8"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="3">
                <TextView
                    android:id="@+id/new_species_imageURI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_location_take_image"
                    android:layout_row="0"
                    android:layout_column="0"/>
                <ImageView
                    android:id="@+id/new_species_imagePreview"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_height="100dp"
                    android:layout_width="100dp"

                    />
                <Button
                    android:id="@+id/new_species_capture_image_button"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_row="2"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:text="@string/new_location_take_picture"
                    />
            </GridLayout>

            <TextView
                android:layout_margin="@dimen/text_margin"
                android:text=".locationURI"
                />
            <Spinner
                android:id="@+id/new_species_locationURI_spinner">
            </Spinner>

            <TextView
                android:layout_margin="@dimen/text_margin"
                android:text=".identifier"
                />
            <GridLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:rowCount="2"
                android:columnCount="1"
                >
                <EditText
                    android:id="@+id/new_species_identifier"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_row="0"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    />
                <Button
                    android:id="@+id/new_species_autoGenerateIdentifier"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_column="0"
                    android:text="@string/new_location_autogenerate_identifier"
                    />
            </GridLayout>
            <CheckBox
                android:id="@+id/add_gps_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_gps_location"
                android:layout_margin="@dimen/text_margin"
                android:layout_column="1"/>
            <TextView
                android:id="@+id/gps_location_lat"
                android:layout_column="1"
                android:layout_margin="@dimen/text_margin"
                android:text="0"
                />
            <TextView
                android:id="@+id/gps_location_lon"
                android:layout_column="1"
                android:layout_margin="@dimen/text_margin"
                android:text="0"
                />
            <!--
            Without this padding here the ActionBar would
            shift some of the content below the visible screen.
            It's kinda hacky but works :-P
            -->
            <View
                android:layout_column="1"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_height="?actionBarSize">
            </View>
        </GridLayout>

    </ScrollView>

</LinearLayout>