<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="11">

        <TextView
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text=".identifier"
            android:layout_margin="@dimen/text_margin"
            />
        <TextView
            android:layout_column="1"
            android:layout_row="0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:id="@+id/edit_location_id"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="0"
            android:text=".latitude"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="1"
            android:id="@+id/edit_location_latitude"
            android:inputType="numberDecimal"
            />



        <TextView
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="0"
            android:text=".longitude"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="1"
            android:id="@+id/edit_location_longitude"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="0"
            android:text=".name"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="1"
            android:id="@+id/edit_location_name"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="0"
            android:text=".radius"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="1"
            android:id="@+id/edit_location_radius"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="0"
            android:text=".address"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="1"
            android:id="@+id/edit_location_address"
            android:inputType="textPostalAddress"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="0"
            android:text=".tags"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="1"
            android:id="@+id/edit_location_tags"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_column="0"
            android:text=".imageURI"
            />

        <GridLayout
            android:layout_row="7"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:rowCount="3"
            android:columnCount="1">
            <TextView
                android:id="@+id/edit_location_imageURI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_location_take_image"
                android:layout_row="0"
                android:layout_column="0"/>
            <ImageView
                android:id="@+id/edit_location_imagePreview"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_height="100dp"
                android:layout_width="100dp"

                />
            <Button
                android:id="@+id/edit_location_capture_image_button"
                android:layout_margin="@dimen/text_margin"
                android:layout_row="2"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:text="@string/new_location_take_picture"
                />
        </GridLayout>

        <Button
            android:id="@+id/edit_location_save_button"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:text="@string/save_location"
            />
    </GridLayout>
</ScrollView>